# brdles_winit_slint_test

./: Cargo.toml  build.rs
src/: main.rs
ui/: borderless-window.slint
